--- a/HealthStyleHackathon.ipynb
+++ b/HealthStyleHackathon.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1Px3yOwrvqkgcm4x3vLjT8mLjQpA6zIuB",
-      "authorship_tag": "ABX9TyMkStcbPXyLA9C7fU3ZeFRq",
+      "authorship_tag": "ABX9TyOGePSkEkPilVBXRs0ll2rS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,16 +76,16 @@
         "\n",
         "df = pd.read_csv(new_dataset)\n",
         "\n",
-        "df_new = df.head(100)\n"
+        "df_new = df.head(500)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "z486cEmVNagp",
-        "outputId": "48278f21-fb5d-4f8f-bf86-18c1605cd3f7"
+        "outputId": "8e1b386c-7d4e-4b5d-b801-0de9a7b7ec29"
       },
-      "execution_count": 58,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,10 +100,26 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
+        "df_new['abstract'].replace('', np.nan, inplace=True)\n",
+        "\n",
+        "df_new.dropna(subset=['abstract'], inplace=True)\n",
+        "\n",
+        "df_new"
+      ],
+      "metadata": {
+        "id": "bj9KTLGI9XfZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from google.colab import files\n",
         "\n",
-        "df_new.to_csv('output.csv', encoding = 'utf-8-sig') \n",
-        "files.download('output.csv')"
+        "df_new.to_csv('final_output_500.csv', encoding = 'utf-8-sig') \n",
+        "files.download('final_output_500.csv')"
       ],
       "metadata": {
         "colab": {
@@ -111,9 +127,9 @@
           "height": 17
         },
         "id": "FCZS63uAuEwc",
-        "outputId": "c8586625-6edc-457c-fb3d-b38c2290a47c"
+        "outputId": "54e251d1-4be8-428d-e9e2-320cea68ba00"
       },
-      "execution_count": 59,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "display_data",
@@ -171,7 +187,7 @@
           "output_type": "display_data",
           "data": {
             "application/javascript": [
-              "download(\"download_f5fe2096-c77a-41c6-a24d-c41a8cea0084\", \"output.csv\", 175860)"
+              "download(\"download_3c9943bd-1687-4f6e-91ab-c837bf2078d7\", \"final_output_500.csv\", 937257)"
             ],
             "text/plain": [
               "<IPython.core.display.Javascript object>"
@@ -184,7 +200,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_final = pd.read_csv('output.csv')\n",
+        "df_final = pd.read_csv('final_output_500.csv')\n",
         "\n",
         "health = df_final.abstract.values\n",
         "\n",
@@ -200,15 +216,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_hTrf1zBufOj",
-        "outputId": "a88349c9-b9a1-410c-8b22-7d0076c24f93"
+        "outputId": "49769de8-9c44-447a-e37a-10805082762d"
       },
-      "execution_count": 62,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "100\n"
+            "478\n"
           ]
         }
       ]
@@ -225,7 +241,7 @@
       "metadata": {
         "id": "St7wbrpYw9Xe"
       },
-      "execution_count": 65,
+      "execution_count": 112,
       "outputs": []
     },
     {
@@ -238,13 +254,42 @@
       "metadata": {
         "id": "R0RAF29Rwxkh"
       },
-      "execution_count": 66,
+      "execution_count": 113,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "x = torch.tensor(corpus_embeddings)\n",
+        "torch.save(x, 'contradictions_papers_with500.pt')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MW0f9u-63ljM",
+        "outputId": "80318036-1898-4307-a0c1-3a026a662999"
+      },
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:1: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+            "  \"\"\"Entry point for launching an IPython kernel.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from termcolor import colored\n",
+        "\n",
+        "\n",
+        "const = \"https://bmcinfectdis.biomedcentral.com/articles/\"\n",
+        "\n",
         "\n",
         "charities = []\n",
         "def search_papers(title):\n",
@@ -257,10 +302,14 @@
         "   for hit in search_hits:\n",
         "         related_paper = health[hit['corpus_id']]\n",
         "         count += 1\n",
-        "         print(related_paper)\n",
+        "         \n",
         "         print(\"similiarity score of \" + str(format(search_hits[count-1]['score'],\".2f\")))\n",
         "         subsetDataFrame = df_final[df_final['abstract'] == related_paper]\n",
-        "         k=subsetDataFrame.values\n",
+        "         print(related_paper)\n",
+        "         print(\"\\n\")\n",
+        "         k= subsetDataFrame.values\n",
+        "         print(const+k[0][5])\n",
+        "         print(\"\\n\")\n",
         "        #  a_string = \"Name of Organization\"\n",
         "        #  print(\"\\033[1m\" + a_string + \"\\033[0m\")\n",
         "        #  print(colored(str(k[0][4]), 'red'))\n",
@@ -270,7 +319,7 @@
         "#search_papers(title=input(str()))\n",
         "\n",
         "\n",
-        "search_papers(\"ring vaccination is useless\")\n",
+        "search_papers(\"what does the study say about the misconceptions about cancer\")\n",
         "\n",
         "# search_papers(\"how does inflamatory disease start from HIV\")"
       ],
@@ -279,21 +328,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mkzEP9I2u-DM",
-        "outputId": "2bd27559-c009-4398-ae6b-c594c9ce10b1"
+        "outputId": "91ae2103-47a1-494d-86d6-019e3dd72c73"
       },
-      "execution_count": 76,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\u001b[34mTop 10 charities related\u001b[0m\n",
-            "BACKGROUND: Previous smallpox ring vaccination models based on contact tracing over a network suggest that ring vaccination would be effective, but have not explicitly included response logistics and limited numbers of vaccinators. METHODS: We developed a continuous-time stochastic simulation of smallpox transmission, including network structure, post-exposure vaccination, vaccination of contacts of contacts, limited response capacity, heterogeneity in symptoms and infectiousness, vaccination prior to the discontinuation of routine vaccination, more rapid diagnosis due to public awareness, surveillance of asymptomatic contacts, and isolation of cases. RESULTS: We found that even in cases of very rapidly spreading smallpox, ring vaccination (when coupled with surveillance) is sufficient in most cases to eliminate smallpox quickly, assuming that 95% of household contacts are traced, 80% of workplace or social contacts are traced, and no casual contacts are traced, and that in most cases the ability to trace 1–5 individuals per day per index case is sufficient. If smallpox is assumed to be transmitted very quickly to contacts, it may at times escape containment by ring vaccination, but could be controlled in these circumstances by mass vaccination. CONCLUSIONS: Small introductions of smallpox are likely to be easily contained by ring vaccination, provided contact tracing is feasible. Uncertainties in the nature of bioterrorist smallpox (infectiousness, vaccine efficacy) support continued planning for ring vaccination as well as mass vaccination. If initiated, ring vaccination should be conducted without delays in vaccination, should include contacts of contacts (whenever there is sufficient capacity) and should be accompanied by increased public awareness and surveillance.\n",
-            "similiarity score of 0.76\n",
-            "BACKGROUND: Because smallpox (variola major) may be used as a biological weapon, we reviewed outbreaks in post-World War II Europe and North America in order to understand smallpox transmission patterns. METHODS: A systematic review was used to identify papers from the National Library of Medicine, Embase, Biosis, Cochrane Library, Defense Technical Information Center, WorldCat, and reference lists of included publications. Two authors reviewed selected papers for smallpox outbreaks. RESULTS: 51 relevant outbreaks were identified from 1,389 publications. The median for the effective first generation reproduction rate (initial R) was 2 (range 0–38). The majority outbreaks were small (less than 5 cases) and contained within one generation. Outbreaks with few hospitalized patients had low initial R values (median of 1) and were prolonged if not initially recognized (median of 3 generations); outbreaks with mostly hospitalized patients had higher initial R values (median 12) and were shorter (median of 3 generations). Index cases with an atypical presentation of smallpox were less likely to have been diagnosed with smallpox; outbreaks in which the index case was not correctly diagnosed were larger (median of 27.5 cases) and longer (median of 3 generations) compared to outbreaks in which the index case was correctly diagnosed (median of 3 cases and 1 generation). CONCLUSION: Patterns of spread during Smallpox outbreaks varied with circumstances, but early detection and implementation of control measures is a most important influence on the magnitude of outbreaks. The majority of outbreaks studied in Europe and North America were controlled within a few generations if detected early.\n",
-            "similiarity score of 0.73\n",
-            "BACKGROUND: Contact tracing plays an important role in the control of emerging infectious diseases, but little is known yet about its effectiveness. Here we deduce from a generic mathematical model how effectiveness of tracing relates to various aspects of time, such as the course of individual infectivity, the (variability in) time between infection and symptom-based detection, and delays in the tracing process. In addition, the possibility of iteratively tracing of yet asymptomatic infecteds is considered. With these insights we explain why contact tracing was and will be effective for control of smallpox and SARS, only partially effective for foot-and-mouth disease, and likely not effective for influenza. METHODS AND FINDINGS: We investigate contact tracing in a model of an emerging epidemic that is flexible enough to use for most infections. We consider isolation of symptomatic infecteds as the basic scenario, and express effectiveness as the proportion of contacts that need to be traced for a reproduction ratio smaller than 1. We obtain general results for special cases, which are interpreted with respect to the likely success of tracing for influenza, smallpox, SARS, and foot-and-mouth disease epidemics. CONCLUSIONS: We conclude that (1) there is no general predictive formula for the proportion to be traced as there is for the proportion to be vaccinated; (2) variability in time to detection is favourable for effective tracing; (3) tracing effectiveness need not be sensitive to the duration of the latent period and tracing delays; (4) iterative tracing primarily improves effectiveness when single-step tracing is on the brink of being effective.\n",
-            "similiarity score of 0.73\n"
+            "similiarity score of 0.72\n",
+            "BACKGROUND: The present study aimed to provide information on awareness of the attributable fraction of cancer causes among the Japanese general population. METHODS: A nationwide representative sample of 2,000 Japanese aged 20 or older was asked about their perception and level of concern about various environmental and genetic risk factors in relation to cancer prevention, as a part of an Omnibus Survey. Interviews were conducted with 1,355 subjects (609 men and 746 women). RESULTS: Among 12 risk factor candidates, the attributable fraction of cancer-causing viral and bacterial infection was considered highest (51%), followed by that of tobacco smoking (43%), stress (39%), and endocrine-disrupting chemicals (37%). On the other hand, the attributable fractions of cancer by charred fish and meat (21%) and alcohol drinking (22%) were considered low compared with other risk factor candidates. For most risk factors, attributable fraction responses were higher in women than in men. As a whole, the subjects tended to respond with higher values than those estimated by epidemiologic evidence in the West. The attributable fraction of cancer speculated to be genetically determined was 32%, while 36% of cancer was considered preventable by improving lifestyle. CONCLUSION: Our results suggest that awareness of the attributable fraction of cancer causes in the Japanese general population tends to be dominated by cancer-causing infection, occupational exposure, air pollution and food additives rather than major lifestyle factors such as diet.\n",
+            "\n",
+            "\n",
+            "https://bmcinfectdis.biomedcentral.com/articles/10.1186/1471-2458-6-2\n",
+            "\n",
+            "\n",
+            "similiarity score of 0.72\n",
+            "BACKGROUND: Whether information sources influence health protective behaviours during influenza pandemics or other emerging infectious disease epidemics is uncertain. METHODOLOGY: Data from cross-sectional telephone interviews of 1,001 Hong Kong adults in June, 2009 were tested against theory and data-derived hypothesized associations between trust in (formal/informal) information, understanding, self-efficacy, perceived susceptibility and worry, and hand hygiene and social distancing using Structural Equation Modelling with multigroup comparisons. PRINCIPAL FINDINGS: Trust in formal (government/media) information about influenza was associated with greater reported understanding of A/H1N1 cause (β = 0.36) and A/H1N1 prevention self-efficacy (β = 0.25), which in turn were associated with more hand hygiene (β = 0.19 and β = 0.23, respectively). Trust in informal (interpersonal) information was negatively associated with perceived personal A/H1N1 susceptibility (β = −0.21), which was negatively associated with perceived self-efficacy (β = −0.42) but positively associated with influenza worry (β = 0.44). Trust in informal information was positively associated with influenza worry (β = 0.16) which was in turn associated with greater social distancing (β = 0.36). Multigroup comparisons showed gender differences regarding paths from trust in formal information to understanding of A/H1N1 cause, trust in informal information to understanding of A/H1N1 cause, and understanding of A/H1N1 cause to perceived self-efficacy. CONCLUSIONS/SIGNIFICANCE: Trust in government/media information was more strongly associated with greater self-efficacy and handwashing, whereas trust in informal information was strongly associated with perceived health threat and avoidance behaviour. Risk communication should consider the effect of gender differences.\n",
+            "\n",
+            "\n",
+            "https://bmcinfectdis.biomedcentral.com/articles/10.1371/journal.pone.0013350\n",
+            "\n",
+            "\n",
+            "similiarity score of 0.72\n",
+            "The BIG project looks at some of the ethical concerns surrounding globalization and health.\n",
+            "\n",
+            "\n",
+            "https://bmcinfectdis.biomedcentral.com/articles/10.1371/journal.pmed.0030043\n",
+            "\n",
+            "\n"
           ]
         }
       ]
